--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@ body{
 
 .header, .title-area{
   background-color: #1F2937;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 300px;
 }
 
 .header{
@@ -18,13 +22,13 @@ ul{
   margin: 0;
 }
 
-.title-area > h1{
+.div-left > h1{
   font-size: 48px;
   font-weight: 900;
   color: #F9FaF8;
 }
 
-.title-area > p{
+.div-left > p{
   font-size: 18px;
   color: #E5E7EB;
 }
@@ -32,4 +36,5 @@ ul{
 .title-area > img{
   width: 300px;
   height: 200px;
+  flex-shrink: 0;
 }
