--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 300px;
+  padding: 0 250px 30px 250px;
 }
 
 .header{
@@ -20,21 +20,38 @@ ul{
   list-style-type: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  gap: 15px;
+}
+
+a{
+  text-decoration: none;
+  color: #F9FaF8;
+  font-size: 22px;
+}
+
+.div-left{
+  min-width: 400px;
+  flex: 0 1 500px;
 }
 
 .div-left > h1{
   font-size: 48px;
   font-weight: 900;
   color: #F9FaF8;
+  padding: 0;
+  margin: 0;
 }
 
 .div-left > p{
   font-size: 18px;
   color: #E5E7EB;
+  padding: 0;
+  margin: 0;
 }
 
 .title-area > img{
-  width: 300px;
-  height: 200px;
+  width: 500px;
+  height: 250px;
   flex-shrink: 0;
 }
