--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ a{
   font-size: 22px;
 }
 
+.title-area{
+  flex-wrap: wrap;
+}
+
 .div-left{
   min-width: 400px;
   flex: 0 1 500px;
@@ -47,6 +51,7 @@ a{
   font-size: 18px;
   color: #E5E7EB;
   padding: 0;
+  padding-bottom: 5px;
   margin: 0;
 }
 
@@ -54,4 +59,13 @@ a{
   width: 500px;
   height: 250px;
   flex-shrink: 0;
+}
+
+button{
+  background-color: #3882f6;
+  padding: 8px;
+  border-radius: 4px;
+  border: none;
+  color: white;
+  font-weight: 700;
 }
