Change styling in product-info to add the header
Put the h2 into the product-info div this required
adding an additional info div in order for the flex
display to keep its shape.

--- a/css/style.css
+++ b/css/style.css
@@ -70,15 +70,24 @@ button{
   font-weight: 700;
 }
 
-h2{
-  text-align: center;
-}
+
 
 .product-info{
   display: flex;
+  flex-direction: column;
+}
+
+.product-info h2{
+  font-size: 36px;
+  font-weight: 900;
+  text-align: center;
+}
+
+.info-cards{
+  display: flex;
   justify-content: center;
   gap: 50px;
-  flex-wrap: wrap;
+  flex-wrap:wrap;
 }
 
 .info{
