--- a/css/style.css
+++ b/css/style.css
@@ -135,3 +135,37 @@ button{
   padding-right: 40px;
   margin: 0;
 }
+
+.signup{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 100px 0;
+  
+}
+
+.signup-container{
+  flex: 0 0 70%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 30px 0;
+  background-color: #3882f6;
+  border-radius: 12px;
+  color: white;
+}
+
+.signup-container button{
+  border: 2px solid white;
+  padding: 8px 30px;
+  font-size: 18px;
+}
+
+.signup h2{
+  margin-bottom: 0;
+}
+
+.signup p{
+  margin-top: 0;
+  font-size: 22px;
+}
