--- a/css/style.css
+++ b/css/style.css
@@ -169,3 +169,13 @@ button{
   margin-top: 0;
   font-size: 22px;
 }
+
+.footer{
+  background-color: #1F2937;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #e5e7eb;
+  font-size: 24px;
+  padding: 20px 0;
+}
